--- a/style.css
+++ b/style.css
@@ -307,17 +307,18 @@ body{
 .experts-session-img{
     position: relative;
 }
-<<<<<<< HEAD
 .experts-session-cards{
-=======
-.fifth-session-img img{
-    display:block;
-}
-.fifth-session-cards{
->>>>>>> 603bd53a279c4588fd9407436ce486cedf16a890
     display: flex;
     gap:20px;
 }
+/* .fifth-session-img img{
+    display:block;
+} */
+/* .fifth-session-cards{
+    display: flex;
+    gap:20px;
+
+} */
 .experts-session-card{
     display:flex;
     flex-direction: column;
@@ -676,11 +677,7 @@ opacity: 0px
     display:flex;
     /* align-items: center;
     justify-content: center; */
-<<<<<<< HEAD
     gap: 50px;
-=======
-    gap: 45px;
->>>>>>> 603bd53a279c4588fd9407436ce486cedf16a890
 }
 .footer-details{
     display: flex;
